fix minor grammar, quotes in tables

--- a/data/references_ms.bib
+++ b/data/references_ms.bib
@@ -36,12 +36,6 @@
   publisher = {Wiley Online Library},
 }
 
-@Misc{council2010australian,
-  title = {Australian Plant Census},
-  author = {{CHAH}},
-  year = {2010},
-}
-
 @Article{diaz1998plant,
   title = {Plant functional traits and environmental filters at a regional scale},
   author = {Sandra Diaz and Marcelo Cabido and Fernando Casanoves},
@@ -183,7 +177,7 @@
 }
 
 @Manual{R-2020,
-  title = {{R}: a language and environment for statistical computing},
+  title = {{R}: A language and environment for statistical computing},
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
@@ -355,7 +349,8 @@
   title = {Towards Global Data Products of {{Essential Biodiversity Variables}} on Species Traits},
   author = {Kissling, W. Daniel and Walls, Ramona and Bowser, Anne and Jones, Matthew O. and Kattge, Jens and Agosti, Donat and Amengual, Josep and Basset, Alberto and van Bodegom, Peter M. and Cornelissen, Johannes H. C. and Denny, Ellen G. and Deudero, Salud and Egloff, Willi and Elmendorf, Sarah C. and Garc{\'i}a, Enrique Alonso and Jones, Katherine D. and Jones, Owen R. and Lavorel, Sandra and Lear, Dan and Navarro, Laetitia M. and Pawar, Samraat and Pirzl, Rebecca and R{\"u}ger, Nadja and Sal, Sofia and {Salguero-G{\'o}mez}, Roberto and Schigel, Dmitry and Schulz, Katja-Sabine and Skidmore, Andrew and Guralnick, Robert P.},
   year = {2018},
-  pages = {1},
+  number = {2},
+  pages = {1531–1540},
   doi = {10.1038/s41559-018-0667-3},
   journal = {Nature Ecology \& Evolution}
 }
